# Humanoid_navigation

./: .gitignore  NAV_PLAN.md  filter_scan.py  jetson_mapping_migration.md
MuJoCo-LiDAR/: AGENTS.md
MuJoCo-LiDAR/benchmarks/: check_regression.py
MuJoCo-LiDAR/docs/en/: PROJECT_STRUCTURE.md  VERIFICATION_REPORT.md
MuJoCo-LiDAR/docs/zh_CN/: API.md  USAGE.md  VERIFICATION_REPORT.md
MuJoCo-LiDAR/examples/: convert_hfield_to_geom.py  example_native.py
MuJoCo-LiDAR/examples/config/: g1.rviz
MuJoCo-LiDAR/examples/onnx/: go2_policy.onnx
MuJoCo-LiDAR/examples/test/: test_speed.py
MuJoCo-LiDAR/tests/: test_cpu_backend.py  test_raytracing.py  test_wrapper.py
agibot_x1_train/: .gitignore  mjmodel.xml  setup.py
agibot_x1_train/humanoid/envs/: __init__.py
agibot_x1_train/humanoid/scripts/: car_nav.py  convert_to_jit.py  play.py  play_onnx.py  sim2sim.py  sim2sim_nav.py
agibot_x1_train/humanoid/utils/: helpers.py
agibot_x1_train/策略模型/: policy_dh.jit
drivers/livox_ros_driver2/: build.sh
drivers/livox_ros_driver2/config/: MID360_config.json
fast_lio2/: CMakeLists.txt
fast_lio2/config/: mid360.yaml  sim_module_mid360.yaml
fast_lio2/launch/: mapping.launch.py
fast_lio2/src/: laserMapping.cpp
humanoid_sim/: CMakeLists.txt  package.xml
humanoid_sim/config/: nav2_mujoco.yaml  nav2_params.yaml
humanoid_sim/launch/: navigation.launch.py  octomap_mapping.launch.py  simulation.launch.py  tf_bridge.launch.py
humanoid_sim/maps/: f1_test1.pgm  lab_env_map.pgm  mujoco.pgm  mujoco.yaml  mujoco_car.pgm
humanoid_sim/rviz_cfg/: nav.rviz
humanoid_sim/scripts/: generate_map_from_xml.py  mujoco_lidar_bridge.py  odom_bridge.py
humanoid_sim/worlds/: school_room2.world
livox_ros_driver2/config/: MID360_config.json
localization/fast_lio2/: CMakeLists.txt
localization/fast_lio2/config/: car_30_mid360.yaml  car_30_mid360_real.yaml  car_mid360.yaml  mid360.yaml  mujoco_x1_mid360.yaml  sim_module_mid360.yaml  sim_module_mid360_custom.yaml  simulation_mid360.yaml
localization/fast_lio2/launch/: mapping.launch.py  mapping_real.launch.py  mapping_sim_module.launch.py
localization/fast_lio2/rviz/: fastlio.rviz
localization/fast_lio2/src/: laserMapping.cpp
localization/open3d_loc/: CMakeLists.txt  package.xml
localization/open3d_loc/config/: loc_param_g1.yaml
localization/open3d_loc/include/open3d_conversions/: DpgtConversions.h  RosConversions.h  open3d_conversions.h
localization/open3d_loc/include/open3d_registration/: open3d_registration.h
localization/open3d_loc/launch/: localization_3d_g1.launch.py  open3d_loc_g1.launch.py  open3d_loc_x1.launch.py
localization/open3d_loc/rviz_cfg/: fastlio.rviz
localization/open3d_loc/src/: global_localization.cpp
localization/open3d_loc/src/open3d_conversions/: open3d_conversions.cpp
localization/open3d_loc/src/open3d_registration/: open3d_registration.cpp
open3d_loc/config/: loc_param_g1.yaml
open3d_loc/src/: global_localization.cpp
planning/humanoid_sim/: CMakeLists.txt  package.xml
planning/humanoid_sim/config/: nav2.yaml  nav2_30.yaml  nav2_mujoco.yaml  nav2_params.yaml  nav2_real.yaml
planning/humanoid_sim/launch/: nav_state_manager.launch.py  navigation.launch.py  navigation_real.launch.py  octomap_car30.launch.py  octomap_mapping.launch.py  octomap_real.launch.py  pc2scan.launch.py  simulation.launch.py  tf_bridge.launch.py  tf_bridge_real.launch.py
planning/humanoid_sim/maps/: f1_test1.yaml  lab_env_map.pgm  lab_env_map.yaml  mujoco.yaml  mujoco_car.yaml  mujoco_lab.pgm  mujoco_lab.yaml  my_map.pgm  my_map.yaml  school_room.pgm  school_room.yaml  school_room2.pgm  school_room2.yaml  school_room_30.pgm  school_room_30.yaml
planning/humanoid_sim/scripts/: generate_nav_map.py  leg_odom_node.py  livox_imu_throttle.py  mujoco_lidar_bridge.py  nav_state_manager.py  odom_bridge.py
planning/humanoid_sim/urdf/: old.xacro  robot.xacro  robot_30.xacro
planning/humanoid_sim/worlds/: school_room.world  school_room2.world  test.world  test_room.world
sim/MuJoCo-LiDAR/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml
sim/MuJoCo-LiDAR/benchmarks/: benchmark_core.py  check_regression.py
sim/MuJoCo-LiDAR/docs/en/: API.md  DEVELOPMENT.md  INSTALLATION.md  PROJECT_STRUCTURE.md  USAGE.md  VERIFICATION_REPORT.md
sim/MuJoCo-LiDAR/docs/zh_CN/: API.md  DEVELOPMENT.md  INSTALLATION.md  PROJECT_STRUCTURE.md  USAGE.md  VERIFICATION_REPORT.md
sim/MuJoCo-LiDAR/examples/: convert_hfield_to_geom.py  example_mjcf.py  example_native.py  example_string.py  example_taichi.py  lidar_vis_ros1_wrapper.py  lidar_vis_ros2.py  lidar_vis_ros2_wrapper.py  terrain_generator.py  unitree_g1.py  unitree_g1_ros2.py  unitree_go2.py  unitree_go2_ros2.py
sim/MuJoCo-LiDAR/examples/config/: g1.rviz  rviz2_config.rviz  rviz_config.rviz
sim/MuJoCo-LiDAR/examples/onnx/: g1_policy.onnx
sim/MuJoCo-LiDAR/examples/test/: test_hfield.py  test_speed.py
sim/MuJoCo-LiDAR/models/: demo.xml  scene.xml  scene_g1.xml  scene_geom.xml  scene_go2.xml  scene_go2_stairs_terrain.xml  scene_primitive.xml  stairs_terrain.xml
sim/MuJoCo-LiDAR/models/unitree_g1/: g1_mjx_feetonly.xml
sim/MuJoCo-LiDAR/models/unitree_go2/: go2_mjx.xml
sim/MuJoCo-LiDAR/src/mujoco_lidar/: __init__.py  lidar_wrapper.py  mj_lidar_utils.py  scan_gen.py  scan_gen_livox_ti.py
sim/MuJoCo-LiDAR/src/mujoco_lidar/core_cpu/: __init__.py  mjlidar_cpu.py
sim/MuJoCo-LiDAR/src/mujoco_lidar/core_jax/: __init__.py  geometry.py  mjlidar_jax.py
sim/MuJoCo-LiDAR/src/mujoco_lidar/core_ti/: __init__.py  mjlidar_ti.py
sim/MuJoCo-LiDAR/tests/: conftest.py  test_core.py  test_cpu_backend.py  test_integration.py  test_raytracing.py  test_scan_gen.py  test_scan_patterns.py  test_wrapper.py
sim/livox_laser_simulation_ros2/: CMakeLists.txt  README.md  package.xml
sim/livox_laser_simulation_ros2/src/: livox_points_plugin.cpp
sim/livox_laser_simulation_ros2/urdf/: HAP.xacro  avia.xacro  horizon.xacro  mid360.xacro  mid40.xacro  mid70.xacro  (+1 more)
tools/: drift_check.py  nav_test_runner.py  sim2sim_test.sh
(+11 files in other folders)
