[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco_lidar"
dynamic = ["version"]
authors = [
    {name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn"}
]
description = "A LiDAR sensor designed for MuJoCo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.20.0",
    "mujoco >= 3.2.0",
    "scipy",
    "pynput",
    "matplotlib",
    "zhplot",
]

[project.optional-dependencies]
# Taichi backend with all dependencies (taichi, tibvh, and utilities)
taichi = [
    "taichi >= 1.6.0",
    "tibvh >= 0.1.2",
]
# JAX backend
jax = [
    "jax[cuda12]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]
examples = [
    "onnxruntime>=1.19.2",
    "etils[epath]>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/TATP-233/MuJoCo-LiDAR.git"
Repository = "https://github.com/TATP-233/MuJoCo-LiDAR.git"

[tool.setuptools]
packages = ["mujoco_lidar"]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "mujoco_lidar.__version__"}

[tool.setuptools.package-data]
"mujoco_lidar" = ["scan_mode/*.npy"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
